--- a/templates/pages/forgot-password.html
+++ b/templates/pages/forgot-password.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿{% load static %}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,25 +16,13 @@
     <!-- Google font-->
     <link href="../../css2?family=Nunito+Sans:wght@200&family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <!-- Fontawesome css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/vendors/font-awesome.css">
-
-    <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="assets/css/vendors/themify.css">
-
-    <!-- Feather icon css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/vendors/feather-icon.css">
-
-    <!-- Bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/vendors/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/bootstrap.css' %}">
 
     <!-- App css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
 
     <!-- Responsive css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-</head>
-
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/responsive.css' %}">
 <body>
     <!-- Forgot password start-->
     <div class="login-section">
@@ -59,13 +48,13 @@
     <!-- Forgot password end-->
 
     <!-- latest jquery-->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
 
     <!-- Bootstrap js-->
-    <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap/bootstrap.bundle.min.js' %}"></script>
 
     <!-- Theme js-->
-    <script src="assets/js/script.js"></script>
+    <script src="{% static 'assets/js/script.js' %}"></script>
 </body>
 
 </html>
