--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
             <div class="header-wrapper row m-0">
                 <div class="header-logo-wrapper col-auto p-0">
                     <div class="logo-wrapper">
-                        <a href="index.html">
+                        <a href="{% url 'home' %}">
                             <img class="img-fluid main-logo" src="{% static 'assets/images/logo/logo.png' %}" alt="logo">
                             <img class="img-fluid white-logo" src="{% static 'assets/images/logo/logo-white' %}.png" alt="logo">
                         </a>
@@ -243,7 +243,7 @@
             <div class="sidebar-wrapper">
                 <div>
                     <div class="logo-wrapper logo-wrapper-center">
-                        <a href="index.html" data-bs-original-title="" title="">
+                        <a href="{% url 'home' %}" data-bs-original-title="" title="">
                             <img class="img-fluid for-dark" src="{% static 'assets/images/logo/logo-white.png' %}" alt="">
                         </a>
                         <div class="back-btn">
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                     <div class="logo-icon-wrapper">
-                        <a href="index.html">
+                        <a href="{% url 'home' %}">
                             <img class="img-fluid main-logo" src="{% static 'assets/images/logo/logo.png' %}" alt="logo">
                         </a>
                     </div>
@@ -274,7 +274,7 @@
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title link-nav" href="index.html">
+                                    <a class="sidebar-link sidebar-title link-nav" href="{% url 'home' %}">
                                         <i data-feather="home"></i>
                                         <span>Dashboard</span>
                                     </a>
