--- a/templates/pages/add-new-user.html
+++ b/templates/pages/add-new-user.html
@@ -25,9 +25,10 @@
 
                                             <div class="tab-content" id="pills-tabContent">
                                                 <div class="tab-pane fade show active" id="pills-home" role="tabpanel">
-                                                    <form class="theme-form theme-form-2 mega-form">
+                                                    <form class="theme-form theme-form-2 mega-form" method="post">
+                                                        {% csrf_token %}
                                                         <div class="card-header-1">
-                                                            <h5>Product Information</h5>
+                                                            <h5>User Information</h5>
                                                         </div>
 
                                                         <div class="row">
@@ -35,7 +36,7 @@
                                                                 <label class="form-label-title col-lg-2 col-md-3 mb-0">First
                                                                     Name</label>
                                                                 <div class="col-md-9 col-lg-10">
-                                                                    <input class="form-control" type="text">
+                                                                    <input class="form-control" type="text" name="first_name">
                                                                 </div>
                                                             </div>
 
@@ -43,25 +44,32 @@
                                                                 <label class="col-lg-2 col-md-3 col-form-label form-label-title">Email
                                                                     Address</label>
                                                                 <div class="col-md-9 col-lg-10">
-                                                                    <input class="form-control" type="email">
+                                                                    <input class="form-control" type="email" name="username">
                                                                 </div>
                                                             </div>
 
                                                             <div class="mb-4 row align-items-center">
                                                                 <label class="col-lg-2 col-md-3 col-form-label form-label-title">Password</label>
                                                                 <div class="col-md-9 col-lg-10">
-                                                                    <input class="form-control" type="password">
+                                                                    <input class="form-control" type="password" name="password">
                                                                 </div>
                                                             </div>
 
-                                                            <div class="row align-items-center">
+                                                            <div class="mb-4 row align-items-center">
                                                                 <label class="col-lg-2 col-md-3 col-form-label form-label-title">Confirm
                                                                     Password</label>
                                                                 <div class="col-md-9 col-lg-10">
-                                                                    <input class="form-control" type="password">
+                                                                    <input class="form-control" type="password" name="confirm_password">
+                                                                </div>
+                                                            </div>
+                                                            <div class="row align-items-center">
+                                                                <label class="col-lg-2 col-md-3 col-form-label form-label-title">Groups</label>
+                                                                <div class="col-md-9 col-lg-10">
+                                                                    {{ form.groups }}
                                                                 </div>
                                                             </div>
                                                         </div>
+                                                        <button class="btn btn-primary w-100 mt-5" type="submit">Add</button>
                                                     </form>
                                                 </div>
 
